{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 517,
  "lineage": "c732b115-7849-7480-184e-2934e4c83ac0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rlmgt_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00099bd438037bd3a",
            "owner_id": "496124100072",
            "tags": {
              "Name": "releaseMgtIGW"
            },
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rlmgt_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "rlmgt-elb-access-logs-bucket",
                "enabled": true,
                "prefix": "rlmgt-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:loadbalancer/app/releaseMgtElb/74aca0ba5848991a",
            "arn_suffix": "app/releaseMgtElb/74aca0ba5848991a",
            "dns_name": "releaseMgtElb-289415100.eu-west-3.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:loadbalancer/app/releaseMgtElb/74aca0ba5848991a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "releaseMgtElb",
            "security_groups": [
              "sg-0d11f30a3e761eca6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0080b2ffa5c3de8ec"
              },
              {
                "subnet_id": "subnet-0450df4361c79968c"
              },
              {
                "subnet_id": "subnet-0b9150a4a712bc007"
              }
            ],
            "subnets": [
              "subnet-0080b2ffa5c3de8ec",
              "subnet-0450df4361c79968c",
              "subnet-0b9150a4a712bc007"
            ],
            "vpc_id": "vpc-0a79a6f8d711d5554",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "depends_on": [
            "aws_s3_bucket.rlmgt_s3_access_logs_bucket",
            "aws_security_group.rlmgt_elb_sg",
            "aws_subnet.rlmgt_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rlmgt_elb_listener_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:listener/app/releaseMgtElb/74aca0ba5848991a/c5d900a0c547cefc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:listener/app/releaseMgtElb/74aca0ba5848991a/c5d900a0c547cefc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:loadbalancer/app/releaseMgtElb/74aca0ba5848991a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.rlmgt_elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rlmgt_elb_listener_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:listener/app/releaseMgtElb/74aca0ba5848991a/9cc1c5c5d70d4fd2",
            "certificate_arn": "arn:aws:acm:eu-west-3:496124100072:certificate/5d207839-3699-4bc7-b207-6f52ddd42fd3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:targetgroup/releaseMgtTargetGroup/536dc608ca164ebb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:listener/app/releaseMgtElb/74aca0ba5848991a/9cc1c5c5d70d4fd2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:loadbalancer/app/releaseMgtElb/74aca0ba5848991a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.rlmgt_elb",
            "aws_lb_target_group.rlmgt_elb_target_group",
            "data.aws_acm_certificate.rlmgt_domain_certificate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rlmgt_elb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:targetgroup/releaseMgtTargetGroup/536dc608ca164ebb",
            "arn_suffix": "targetgroup/releaseMgtTargetGroup/536dc608ca164ebb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:496124100072:targetgroup/releaseMgtTargetGroup/536dc608ca164ebb",
            "lambda_multi_value_headers_enabled": false,
            "name": "releaseMgtTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rlmgt_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09d455ee6d884c789",
            "owner_id": "496124100072",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00099bd438037bd3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "releaseMgtRoute"
            },
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_internet_gateway.rlmgt_igw",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rlmgt_route_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0063943d4fded0068",
            "route_table_id": "rtb-09d455ee6d884c789",
            "subnet_id": "subnet-0080b2ffa5c3de8ec"
          },
          "depends_on": [
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003f0dda957c915ec",
            "route_table_id": "rtb-09d455ee6d884c789",
            "subnet_id": "subnet-0b9150a4a712bc007"
          },
          "depends_on": [
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dd1156d568bd34f",
            "route_table_id": "rtb-09d455ee6d884c789",
            "subnet_id": "subnet-0450df4361c79968c"
          },
          "depends_on": [
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:496124100072:security-group/sg-0d11f30a3e761eca6",
            "description": "Release Mgt ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Instances access (Web page and health check)",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d11f30a3e761eca6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "releaseMgtElbSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "releaseMgtElbSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:496124100072:security-group/sg-0bb47686937a1ad8b",
            "description": "Release Mgt Instance Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connection from EC2 to Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb47686937a1ad8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP requests from ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d11f30a3e761eca6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "releaseMgtInstanceSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "releaseMgtInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_security_group.rlmgt_elb_sg",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rlmgt_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:496124100072:subnet/subnet-0080b2ffa5c3de8ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0080b2ffa5c3de8ec",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:496124100072:subnet/subnet-0b9150a4a712bc007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b9150a4a712bc007",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:496124100072:subnet/subnet-0450df4361c79968c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0450df4361c79968c",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "vpc_id": "vpc-0a79a6f8d711d5554"
          },
          "depends_on": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rlmgt_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:496124100072:vpc/vpc-0a79a6f8d711d5554",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3347b6d76c5f1b6",
            "default_route_table_id": "rtb-0e12287e1973083a6",
            "default_security_group_id": "sg-07a20b6897d90ff4c",
            "dhcp_options_id": "dopt-98bc9df1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a79a6f8d711d5554",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e12287e1973083a6",
            "owner_id": "496124100072",
            "tags": {
              "Name": "releaseMgtVPC"
            }
          }
        }
      ]
    }
  ]
}